VideoRecorder overflow fix and notpad bug fix

--- a/hirebeat/frontend/src/components/app.css
+++ b/hirebeat/frontend/src/components/app.css
@@ -165,6 +165,7 @@
 
 .practice-card {
   width: 100%;
+  margin-top: 10px;
 }
 
 .setup-card-body {
